# sonic-sairedis

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  common.bzl  config.bazel.h  create_config.bazel.sh  stamp_vars.sh
bazel/: common.bzl  packaging.bzl
lib/: BUILD.bazel  RedisRemoteSaiInterface.cpp
meta/: BUILD.bazel
saiasiccmp/: BUILD.bazel  test.sh
saidiscovery/: BUILD.bazel
saidump/: BUILD.bazel
saiplayer/: BUILD.bazel
saisdkdump/: BUILD.bazel
syncd/: BUILD.bazel  Syncd.cpp  VendorSai.cpp
syncd/tests/: BUILD.bazel
vslib/: BUILD.bazel
