load("//bazel:common.bzl", "CFLAGS_ASAN", "CODE_COVERAGE_CFLAGS", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "DBGFLAGS")

cc_library(
    name = "libsaiasiccmp",
    srcs = [
        "AsicCmp.cpp",
        "CommandLineOptions.cpp",
        "CommandLineOptionsParser.cpp",
        "SaiSwitchAsic.cpp",
        "View.cpp",
        "ViewCmp.cpp",
    ],
    hdrs = [
        "AsicCmp.h",
        "CommandLineOptions.h",
        "CommandLineOptionsParser.h",
        "SaiSwitchAsic.h",
        "View.h",
        "ViewCmp.h",
    ],
    copts = DBGFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    deps = [
        "//:sailib",
        "//lib:libsairedis",
        "//meta:libsaimeta",
        "//syncd:libsyncd",
    ],
)

cc_binary(
    name = "saiasiccmp",
    srcs = ["main.cpp"],
    copts = DBGFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    visibility = ["//syncd:__subpackages__"],
    deps = [
        ":libsaiasiccmp",
    ],
)

sh_test(
  name = "tests",
  srcs = ["test.sh"],
  data = [
    ":saiasiccmp",
    "dump1.json",
    "dump2.json",
    "dump3.json",
  ],
  args = [
    "$(rlocationpath :saiasiccmp)",
    "$(rlocationpath dump1.json)",
    "$(rlocationpath dump2.json)",
    "$(rlocationpath dump3.json)",
  ],
)
