load("//:common.bzl", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_CFLAGS", "DBGFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "CFLAGS_ASAN", "EXTRA_LIBSAI_FLAGS")

AM_CXXFLAGS = [] #$(SAIINC) -I$(top_srcdir)/lib

cc_library(
  name = "libsaiasiccmp",
  hdrs = [
    "AsicCmp.h",
    "CommandLineOptions.h",
    "CommandLineOptionsParser.h",
    "SaiSwitchAsic.h",
    "View.h",
    "ViewCmp.h",
  ],
  srcs = [
    "AsicCmp.cpp",
    "CommandLineOptions.cpp",
    "CommandLineOptionsParser.cpp",
    "SaiSwitchAsic.cpp",
    "View.cpp",
    "ViewCmp.cpp",
  ],
  deps = [
    "//lib:libsairedis",
    "//meta:libsaimeta",
    "//syncd:libsyncd",
  ],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
)

cc_binary(
  name = "saiasiccmp",
  srcs = ["main.cpp"],
  deps = [
    ":libsaiasiccmp",
  ],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
  visibility = ["//syncd:__subpackages__"],
)

# TODO BL: I have no idea what noinst is, but we can probably ignore it for now.
# noinst_LIBRARIES = libsaidump.a

# TODO BL: finish this later
# sh_test(
#   name = "tests",
#   srcs = ["test.sh"],
#   data = [
#     ":saiasiccmp",
#     "dump1.json",
#     "dump2.json",
#     "dump3.json",
#   ],
#   args = [
#     "$(execpath :saiasiccmp)",
#     "$(execpath dump1.json)",
#     "$(execpath dump2.json)",
#     "$(execpath dump3.json)",
#   ],
# )
# TODO BL: tests
# TESTS = test.sh
