load("//:common.bzl", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_CFLAGS", "DBGFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "CFLAGS_ASAN", "EXTRA_LIBSAI_FLAGS")

AM_CXXFLAGS = [] #$(SAIINC) -I$(top_srcdir)/lib

cc_library(
  name = "libsaidump",
  hdrs = ["SaiDump.h"],
  srcs = ["SaiDump.cpp"],
  deps = [
    "//lib:libsairedis",
    "//meta:libsaimeta",
  ],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
)

cc_binary(
  name = "saidump",
  deps = [":libsaidump"],
  srcs = ["main.cpp"],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
  visibility = ["//syncd:__subpackages__"],
)

# TODO BL: I have no idea what noinst is, but we can probably ignore it for now.
# noinst_LIBRARIES = libsaidump.a
