load("//bazel:common.bzl", "CFLAGS_ASAN", "CODE_COVERAGE_CFLAGS", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "DBGFLAGS")

cc_library(
    name = "libsaiplayer",
    srcs = [
        "CommandLineOptions.cpp",
        "CommandLineOptionsParser.cpp",
        "SaiPlayer.cpp",
    ],
    hdrs = [
        "CommandLineOptions.h",
        "CommandLineOptionsParser.h",
        "SaiPlayer.h",
    ],
    copts = DBGFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    deps = [
        "//:sailib",
        "//lib:libsairedis",
        "//meta:libsaimeta",
        "//syncd:libsyncd",
    ],
)

cc_binary(
    name = "saiplayer",
    srcs = ["saiplayer_main.cpp"],
    copts = DBGFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    visibility = ["//syncd:__subpackages__"],
    deps = [
        ":libsaiplayer",
    ],
)
