load("//:common.bzl", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_CFLAGS", "DBGFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "CFLAGS_ASAN", "EXTRA_LIBSAI_FLAGS")
load("@tar.bzl", "tar", "mutate")
load("@rules_distroless//distroless:defs.bzl", "flatten")

AM_CXXFLAGS = [] # $(SAIINC) -I$(top_srcdir)/lib -I$(top_srcdir)/vslib
 
# lib_LTLIBRARIES = libMdioIpcClient.la
# 
# noinst_LIBRARIES = libSyncd.a libSyncdRequestShutdown.a libMdioIpcClient.a
# 
filegroup(
  name = "headers",
  srcs = glob(["*.h"]),
)

libsyncd_srcs = [
  "AsicOperation.cpp",
  "AsicView.cpp",
  "BestCandidateFinder.cpp",
  "BreakConfig.cpp",
  "BreakConfigParser.cpp",
  "CommandLineOptions.cpp",
  "CommandLineOptionsParser.cpp",
  "ComparisonLogic.cpp",
  "FlexCounter.cpp",
  "FlexCounterManager.cpp",
  "GlobalSwitchId.cpp",
  "HardReiniter.cpp",
  "MdioIpcServer.cpp",
  "MetadataLogger.cpp",
  "NotificationHandler.cpp",
  "NotificationProcessor.cpp",
  "NotificationQueue.cpp",
  "PortMap.cpp",
  "PortMapParser.cpp",
  "PortStateChangeHandler.cpp",
  "RedisClient.cpp",
  "RedisNotificationProducer.cpp",
  "RequestShutdownCommandLineOptions.cpp",
  "SaiAttr.cpp",
  "SaiDiscovery.cpp",
  "SaiObj.cpp",
  "SaiSwitch.cpp",
  "SaiSwitchInterface.cpp",
  "ServiceMethodTable.cpp",
  "SingleReiniter.cpp",
  "SwitchNotifications.cpp",
  "Syncd.cpp",
  "TimerWatchdog.cpp",
  "VendorSai.cpp",
  "VidManager.cpp",
  "VirtualOidTranslator.cpp",
  "WarmRestartTable.cpp",
  "WatchdogScope.cpp",
  "Workaround.cpp",
  "ZeroMQNotificationProducer.cpp",
  "syncd_main.cpp",
  "//:config",
]

libsyncd_copts = select({
   "//:asan": ["-DASAN_ENABLED"],
   "//conditions:default": [],
}) + DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS

# TODO parameterize accoriding to //:saivs
# libsyncd_deps = select({
#   "//:saivs": ["//vslib:libsaivs"],
#   "//conditions:default": ["//vslib:libsaivs"],
# }) + [
libsyncd_deps = [
  "//vslib:libsaivs",
  "//meta:libsaimeta",
]

libsyncd_cxxopts = CODE_COVERAGE_CPPFLAGS

cc_library(
  name = "libsyncd",
  srcs = libsyncd_srcs,
  hdrs = [":headers"],
  includes = ["syncd"],
  copts = libsyncd_copts,
# TODO BL: How does this work?
# if SAIVS
# SAILIB=-L$(top_srcdir)/vslib/.libs -lsaivs
# else
# SAILIB=-lsai
# endif
  deps = libsyncd_deps,
  cxxopts = libsyncd_cxxopts,
  visibility = [
    "//syncd:__subpackages__",
    "//saiplayer:__subpackages__",
    "//saidiscovery:__subpackages__",
    "//saiasiccmp:__subpackages__",
  ],
)

syncd_ldflags = [
    "-rdynamic",
] + EXTRA_LIBSAI_FLAGS

syncd_srcs = select({
   "//:asan": [
       "Asan.cpp",
   ],
   "//conditions:default": [],
}) + [
  "main.cpp",
]

cc_binary(
  name = "syncd",
  srcs = syncd_srcs,
  deps = [
    ":libsyncd",
    "//lib:sairedis",
    "//meta:saimeta",
  ] + CODE_COVERAGE_LIBS,
  linkopts = syncd_ldflags,
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = select({
     "//:asan": CFLAGS_ASAN,
     "//conditions:default": [],
  }) + DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
)

# if SAITHRIFT
# libSyncd_a_CXXFLAGS += -DSAITHRIFT=yes
# syncd_CXXFLAGS += -DSAITHRIFT=yes
# syncd_LDADD += -lrpcserver -lthrift
# endif
# 
# if SONIC_ASIC_PLATFORM_BROADCOM
# libSyncd_a_CXXFLAGS += -DMDIO_ACCESS_USE_NPU
# endif
# 
cc_library(
  name = "libsyncd_request_shutdown",
  srcs = [
    "RequestShutdown.cpp",
    "RequestShutdownCommandLineOptions.cpp",
    "RequestShutdownCommandLineOptionsParser.cpp",
    ":headers",
  ],
  deps = [
    "//meta:libsaimeta",
    "//lib:libsairedis",
    "@sonic_swss_common//:libswsscommon",
  ],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
  visibility = ["//syncd:__subpackages__"],
)

cc_binary(
  name = "syncd_request_shutdown",
  srcs = ["syncd_request_shutdown.cpp"],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
  deps = [
    ":libsyncd_request_shutdown",
    "//lib:libsairedis",
  ] + CODE_COVERAGE_LIBS,
)

libmdio_ipc_client_srcs = ["MdioIpcClient.cpp", "MdioIpcClient.h", "MdioIpcCommon.h"]
libmdio_ipc_client_cxxopts = CODE_COVERAGE_CPPFLAGS + ["-Wno-format-truncation"]
libmdio_ipc_client_copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS
libmdio_ipc_client_deps = ["//lib:sairedis"]

cc_library(
  name = "libmdio_ipc_client.a",
  srcs = libmdio_ipc_client_srcs,
  deps = libmdio_ipc_client_deps,
  cxxopts = libmdio_ipc_client_cxxopts,
  copts = libmdio_ipc_client_copts,
  linkstatic = True,
)

cc_library(
  name = "libmdio_ipc_client.la",
  srcs = libmdio_ipc_client_srcs,
  cxxopts = libmdio_ipc_client_cxxopts,
  copts = libmdio_ipc_client_copts,
  deps = [
    "@sonic_swss_common//:libswsscommon",
  ] + libmdio_ipc_client_deps,
  linkstatic = False,
)

cc_shared_library(
  name = "libmdio_ipc_client.so",
  shared_lib_name = "libMdioIpcClient.so",
  deps = [
    ":libmdio_ipc_client.a",
  ],
)

cc_test(
  name = "syncd_tests",
  srcs = ["tests.cpp"],
  dynamic_deps = [
     "@sonic_swss_common//:libswsscommon_archive",
  ],
  deps = [
    ":libsyncd",
  ],
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON,
  # TODO BL: This doesn't work yet, because we need a solution for libswsscommon_shared
  tags = ["manual"],
)

# if SAIVS
# if DASHSAI
# syncd_dash_SOURCES = $(syncd_SOURCES)
# syncd_dash_LDADD = libSyncd.a $(top_srcdir)/lib/libSaiRedis.a -L$(top_srcdir)/meta/.libs -lsaimetadata -lsaimeta \
# 			  -ldl -lhiredis -lswsscommon -lsai -lprotobuf -lpiprotobuf -lpiprotogrpc -lgrpc++ -lpthread -lzmq $(CODE_COVERAGE_LIBS) $(EXTRA_LIBSAI_LDFLAGS)
# endif
# endif
cc_binary(
  name = "syncd_dash",
  srcs = syncd_srcs,
  deps = [":libsyncd"],
  copts = libsyncd_copts,
  cxxopts = libsyncd_cxxopts,
  linkopts = syncd_ldflags,
)

tar(
  name = "syncd_loose_files",
  srcs = [
    "//saidump:saidump",
    "//saiplayer:saiplayer",
    "//saisdkdump:saisdkdump",
    "//saidiscovery:saidiscovery",
    "//saiasiccmp:saiasiccmp",
    ":syncd",
    ":syncd_request_shutdown",
    ":syncd_dash",
    ":libmdio_ipc_client.so",
  ],
  mtree = [
    "./usr/bin/saidump type=file contents=$(location //saidump:saidump)",
    "./usr/bin/saiplayer type=file contents=$(location //saiplayer:saiplayer)",
    "./usr/bin/saisdkdump type=file contents=$(location //saisdkdump:saisdkdump)",
    "./usr/bin/saidiscovery type=file contents=$(location //saidiscovery:saidiscovery)",
    "./usr/bin/saiasiccmp type=file contents=$(location //saiasiccmp:saiasiccmp)",

    "./usr/bin/syncd type=file contents=$(location :syncd)",
    "./usr/bin/syncd_dash type=file contents=$(location :syncd_dash)",
    "./usr/bin/syncd_request_shutdown type=file contents=$(location :syncd_request_shutdown)",

    # TODO Parameterize based on target platform
    "./usr/lib/x86_64-linux-gnu/libMdioIpcClient.so type=file contents=$(location :libmdio_ipc_client.so)",
    "./usr/lib/x86_64-linux-gnu/libMdioIpcClient.so.0 type=link link=./usr/lib/x86_64-linux-gnu/libMdioIpcClient.so",
  ],
)

# "./syncd/scripts/*  usr/bin
tar(
  name = "syncd_scripts",
  srcs = glob(["scripts/**"]),
  mutate = mutate(
    strip_prefix = package_name(),
    package_dir = "./usr/bin",
  ),
)

flatten(
  name = "syncd_pkg",
  tars = [
    ":syncd_loose_files",
    ":syncd_scripts",
  ],
)
